{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "PlayerGraber",
            "id": "6c0087b8-e6c7-4575-9490-bd3dd99d1c21",
            "actions": [
                {
                    "name": "ClickPlayer",
                    "type": "Button",
                    "id": "6fce667f-0cc3-41f7-8008-395b67ca5e39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b1d4bace-cb89-4cf8-9ec2-11f26100efeb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}